fix(spotify-card): fix overflow for spotify card, keep override-y for wrapping

--- a/css/seloris-tweaks.theme.css
+++ b/css/seloris-tweaks.theme.css
@@ -68,7 +68,8 @@
 /* Fix voice users avatar flashing */
 .voiceUsers_e131a9 {
   transition: none !important;
-  overflow: visible !important;
+  overflow: hidden !important;
+  overflow-y: auto !important;
   max-height: unset !important;
 }
 
